<resources>
    <string name="app_name">TimeHack</string>
    <string name="title_clock">TimeHack Dash</string>
    <string name="title_info">Info/Help</string>
    <string name="title_notes">Notes</string>
    <string name="todo">TODO</string>
    <string name="splash_screen">Made by a fellow SM for your use.</string>
    <string name="time_zone_time">Time Zone Time</string>
    <string name="chosen_time_zone">Time Zone</string>
    <string name="current_location_time_date">Local Time &amp; Date</string>
    <string name="julian_date_mmdd">Julian Day DD</string>
    <string name="gps_zulu_time">Zulu Time (+/- 4 sec)</string>
    <string name="view_for_time_zone_time">view_for_time_zone_time</string>
    <string name="view_for_current_time_date">view_for_current_time_date</string>
    <string name="view_for_julian_date">view_for_julian_date</string>
    <string name="view_for_zulu_time">view_for_zulu_time</string>
    <string name="choose_a_time_zone">Choose a TimeZone</string>
    <string name="time_zone_selector">Time_Zone Selector</string>
    <string name="timehack_logo">TimeHack logo</string>
    <string name="spinner_prompt">Select an item</string>
    <string name="show_selected_item">Show Selected Item</string>
    <string name="j_date">date</string>
    <string name="swipe_to_refresh">Swipe to refresh</string>
    <string name="quickhelp_faqs">QuickHelp_FAQs</string>
    <string name="tm_11_5820_890_10_3_sincgars_operation_manual">TM_11-5820-890-10-3</string>
    <string name="tm_11_5820_890_10_7_ncs_pocket_guide">TM_11-5820-890-10-6</string>
    <string name="button">Button</string>
    <string name="quickhelp_pdf">Quickhelp pdf</string>
    <string name="sincgars_tm_pdf">SINCGARS TM pdf</string>
    <string name="sincgars_pocket_guide_tm_pdf">SINCGARS Pocket Guide TM pdf</string>
    <string name="sincgars_operation_tm">SINCGARS Operation TM</string>
    <string name="sincgars_pocket_guide">SINCGARS Pocket Guide</string>
    <string name="header_icon_for_info_help">Header icon for info/help</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="share_note">Share Note</string>
    <string name="note">Note:</string>
    <string name="date">Date:</string>
    <string name="title">Title:</string>
    <string name="save_button_to_save_a_note">save button to save a note.</string>
    <string name="back_button">back button</string>
    <string name="edit_view_note">Edit/View</string>
    <string name="share_button_to_share_a_note">share button to share a note</string>
    <string name="logo_for_notes_page">logo for notes page</string>
    <string name="search_your_notes_here">Search your notes here...</string>
    <string name="click_to_edit_long_click_for_delete_or_share">Click to Edit, Long Click for Delete or Share.</string>
</resources>