<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_clock">

    <!-- Clock part of the navigation dashboard -->
    <fragment
        android:id="@+id/navigation_clock"
        android:name="com.example.timehack.ui.clock.ClockFragment"
        android:label="@string/title_clock"
        android:textStyle="bold"
        android:textColor="@color/white"
        tools:layout="@layout/fragment_clock" />

    <!-- Info part of the navigation dashboard -->
    <fragment
        android:id="@+id/navigation_info"
        android:name="com.example.timehack.ui.info.InfoFragment"
        android:label="@string/title_info"
        android:textStyle="bold"
        android:textColor="@color/white"
        tools:layout="@layout/fragment_info" />

    <!-- Notes part of the navigation dashboard -->
    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.example.timehack.ui.notes.NotesFragment"
        android:label="@string/title_notes"
        android:textStyle="bold"
        android:textColor="@color/white"
        tools:layout="@layout/fragment_notes" />
    <activity
        android:id="@+id/navigation_notesEditor"
        android:name="com.example.timehack.ui.notes.NotesTaker"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes" />
</navigation>