<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for the info screen -->


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#435943"
    tools:context=".ui.info.InfoFragment">

    <TextView
        android:id="@+id/pdf3"
        android:layout_width="261dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/tm_11_5820_890_10_7_ncs_pocket_guide"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button3"
        app:layout_constraintVertical_bias="0.666"
        tools:ignore="TextSizeCheck,VisualLintButtonSize,VisualLintOverlap" />

    <TextView
        android:id="@+id/heading_pocket_guide"
        android:layout_width="321dp"
        android:layout_height="34dp"
        android:layout_marginBottom="20dp"
        android:text="@string/sincgars_pocket_guide"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button3"
        android:layout_width="321dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/zulu_backer"
        android:clickable="true"
        android:contentDescription="@string/sincgars_pocket_guide_tm_pdf"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.599"
        tools:ignore="MissingConstraints,TextSizeCheck,VisualLintButtonSize" />

    <ImageView
        android:id="@+id/pdfView3"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/pdf_icon"
        app:layout_constraintBottom_toBottomOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/pdf3"
        app:layout_constraintTop_toTopOf="@+id/button3"
        app:layout_constraintVertical_bias="0.4"
        tools:ignore="ContentDescription,ImageContrastCheck" />


    <TextView
        android:id="@+id/pdf1"
        android:layout_width="256dp"
        android:layout_height="37dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/quickhelp_faqs"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/pdfView1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintStart_toStartOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/button1"
        app:layout_constraintVertical_bias="0.523"
        tools:ignore="SpUsage,TextSizeCheck,VisualLintButtonSize,VisualLintOverlap" />

    <Button
        android:id="@+id/button1"
        android:layout_width="321dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/zulu_backer"
        android:clickable="true"
        android:contentDescription="@string/quickhelp_pdf"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237"
        tools:ignore="MissingConstraints,TextSizeCheck,VisualLintButtonSize" />

    <ImageView
        android:id="@+id/pdfView1"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:src="@drawable/pdf_icon"
        app:layout_constraintBottom_toBottomOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="@+id/button1"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/pdf1"
        app:layout_constraintTop_toTopOf="@+id/button1"
        app:layout_constraintVertical_bias="0.6"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <Button
        android:id="@+id/button2"
        android:layout_width="321dp"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/zulu_backer"
        android:clickable="true"
        android:contentDescription="@string/sincgars_tm_pdf"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423"
        tools:ignore="MissingConstraints,TextSizeCheck,VisualLintButtonSize,VisualLintOverlap" />

    <ImageView
        android:id="@+id/pdfView2"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:src="@drawable/pdf_icon"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/pdf2"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintVertical_bias="0.666"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/pdf2"
        android:layout_width="266dp"
        android:layout_height="41dp"
        android:background="#00FFFFFF"
        android:fontFamily="monospace"
        android:text="@string/tm_11_5820_890_10_3_sincgars_operation_manual"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2"
        app:layout_constraintVertical_bias="0.882"
        tools:ignore="TextSizeCheck,VisualLintButtonSize,VisualLintOverlap,TextContrastCheck" />

    <TextView
        android:id="@+id/heading_operation"
        android:layout_width="321dp"
        android:layout_height="33dp"
        android:layout_marginBottom="20dp"
        android:text="@string/sincgars_operation_tm"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="319dp"
        android:layout_height="95dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:clickable="false"
        android:contextClickable="false"
        android:fontFamily="monospace"
        android:text="@string/click_above_for_info_help_in_the_form_of_a_pdf"
        android:textAlignment="center"
        android:textColor="#A8AEACAC"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92"
        tools:ignore="TextSizeCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/headerIcon"
        android:layout_width="187dp"
        android:layout_height="130dp"
        android:src="@drawable/icons8_user_manual_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/header_icon_for_info_help" />

</androidx.constraintlayout.widget.ConstraintLayout>

