<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notes_list_container"
    android:layout_width="wrap_content"
    android:layout_height="110dp"
    android:layout_marginTop="3dp"
    android:dividerHeight="5dp"
    app:cardBackgroundColor="#FFFFFF"
    app:cardCornerRadius="15dp"
    app:contentPadding="3dp"
    tools:ignore="TextSizeCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/noteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:fontFamily="monospace"
                android:padding="8dp"
                android:singleLine="true"
                android:text="@string/title"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

            <ImageView
                android:id="@+id/noteOption"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/baseline_menu_24"
                tools:ignore="ContentDescription,ImageContrastCheck" />

        </RelativeLayout>

        <TextView
            android:id="@+id/notesBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:padding="8dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/note"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/notesDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fontFamily="monospace"
            android:marqueeRepeatLimit="marquee_forever"
            android:maxLines="10"
            android:padding="4dp"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="normal"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</androidx.cardview.widget.CardView>